--- a/src/scss/pages/directions/_directions.scss
+++ b/src/scss/pages/directions/_directions.scss
@@ -91,8 +91,23 @@
     margin: auto;
     display: flex;
     justify-content: space-between;
-    margin-top: -60px;
+    margin-top: -110px;
     position: relative;
+
+    @media screen and (max-width: 1200px) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @media screen and (max-width: 768px) {
+        grid-template-columns: 1fr;
+        margin-top: -250px;
+        row-gap: 20px;
+        padding: 0 10px;
+    }
+    @media screen and (max-width: 333px) {
+        grid-auto-rows: minmax(auto,190px);
+        
+    }
 
     &__item {
         width: 100%;
@@ -100,6 +115,9 @@
         padding: 10px 25px;
         background: #ffffff;
         box-shadow: 0px 3.30286px 12.3857px rgba(0, 0, 0, 0.08);
+        @media screen and (max-width: 768px) {
+            // height: 190px;
+        }
 
         &-title {
             font-weight: 600;
@@ -108,6 +126,82 @@
             color: #101010;
             margin-bottom: 15px;
             min-height: 40px;
+        }
+    }
+}
+
+
+.service-page{
+    @media screen and (max-width: 768px) {
+        // padding: 0 10px;
+    }
+    .direction-cards__item{
+        @media screen and (max-width: 1200px) {
+            margin: 0 auto;
+        }
+        @media screen and (max-width: 768px) {
+            max-width: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 0;
+        }
+        .direction-cards__item-title{
+            @media screen and (max-width: 768px) {
+                padding: 20px;
+                font-family: var(--body-font);
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 22px;
+                max-width: 250px;
+            }
+        }
+    }
+    .additionals__container{
+        @media screen and (max-width: 1100px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+        @media screen and (max-width: 768px) {
+            grid-template-columns:  1fr;
+        }
+
+        .additional__content{
+            @media screen and (max-width: 768px) {
+                flex-direction: column;
+            }
+        }
+        .additionals__img-box{
+            @media screen and (max-width: 768px) {
+                margin-bottom: 15px;
+            }
+        }
+        .section__title{
+            
+            @media screen and (max-width: 768px) {
+                font-size: 30px;
+            line-height: 38px;
+            }
+
+        }
+        .additional__title{
+            @media screen and (max-width: 768px) {
+                font-size: 18px;
+                line-height: 22px;
+            }
+        }
+
+        .additional__subtitle{
+            @media screen and (max-width: 768px) {
+                font-size: 16px;
+                line-height: 22px;
+            }
+        }
+        .additionals__description{
+            @media screen and (max-width: 768px) {
+                font-size: 16px;
+                line-height: 24px;
+                font-weight: 500;
+            }
         }
     }
 }
@@ -179,6 +273,17 @@
     .header__banner-wrapper{
         @media screen and (max-width: 768px) {
             max-height: 400px!important;
+        }
+    }
+}
+
+.directions{
+    .directions__container{
+        @media screen and (max-width: 1200px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+        @media screen and (max-width: 768px) {
+            grid-template-columns: 1fr;
         }
     }
 }
