--- a/src/scss/pages/services/_services-consultation.scss
+++ b/src/scss/pages/services/_services-consultation.scss
@@ -26,3 +26,51 @@
         }
     }
 }
+.consultation{
+    .consultation__container{
+        gap:0;
+        column-gap: 117px;
+        @media screen and (max-width: 1100px) {
+            grid-template-columns: 1fr;
+        }
+    }
+
+    .consultation__wrapper{
+        @media screen and (max-width: 768px) {
+            padding: 50px;
+        }
+        @media screen and (max-width: 600px) {
+            padding: 40px 14px 51px 20px;
+        }
+    }
+    .consultation_form__title{
+        grid-area: 1/1/2/2;
+    }
+    .consultation__description-box{
+        grid-area: 2/2/3/3;
+        align-self: start;
+        @media screen and (max-width: 1100px) {
+            grid-area: 2/1/3/2;
+        }
+        @media screen and (max-width: 768px) {
+            margin-bottom: 27px;
+        }
+        .consultation__description{
+            font-size: 16px;
+        }
+    }
+    .consultation__form-box{
+        grid-area: 2/1/3/2;
+        @media screen and (max-width: 1100px) {
+            grid-area: 3/1/4/2;
+        }
+        
+    }
+    .button.button--red{
+        @media screen and (max-width: 768px) {
+            width: 100%;
+            font-size: 20px;
+            line-height: 27.24px;
+        }
+    }
+}
