Add adative in Main

--- a/src/scss/ui/_footer.scss
+++ b/src/scss/ui/_footer.scss
@@ -274,3 +274,13 @@
     
 }
 
+.social__item{
+    &:hover{
+        transition: all .5s ease;
+        .footer__social-icon{
+            fill: #AFAFAF;
+            transition: all .5s ease;
+        }
+    }
+    
+}
