--- a/src/scss/pages/directions/_directions.scss
+++ b/src/scss/pages/directions/_directions.scss
@@ -66,6 +66,9 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-bottom: 50px;
+    @media screen and (max-width: 1200px) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .direction_description {
@@ -170,11 +173,7 @@
                 flex-direction: column;
             }
         }
-        .additionals__img-box{
-            @media screen and (max-width: 768px) {
-                margin-bottom: 15px;
-            }
-        }
+        
         .section__title{
             
             @media screen and (max-width: 768px) {
@@ -206,7 +205,13 @@
     }
 }
 
-.projects {
+.additionals__img-box{
+    @media screen and (max-width: 768px) {
+        margin-bottom: 15px;
+    }
+}
+
+// .projects {
     .section__description{
         max-width: 500px;
         width: 100%;
@@ -239,7 +244,7 @@
             grid-template-columns: 1fr;
         }
     }
-}
+// }
 
 .projects-body{
     
