--- a/src/scss/ui/_form.scss
+++ b/src/scss/ui/_form.scss
@@ -29,12 +29,27 @@
     border: 1px var(--red-color) solid;
 }
 
-.form__agreement {
-    font-size: 11px;
+// .form__agreement {
+//     font-size: 11px;
+//     font-family: var(--header-font);
+//     color: var(--grey-color);
+//     margin-top: 10px;
+    
+// }
+
+.form__agreement{
     font-family: var(--header-font);
     color: var(--grey-color);
     margin-top: 10px;
+    line-height: 13.37px;
+    font-size: 12px;
+    @media screen and (max-width: 768px) {
+        max-width: 256px;
+        width: 100%;
+        margin-right: 0;
+    }
 }
+
 .form__agreement a {
     color: var(--grey-color);
     text-decoration: underline;
