--- a/src/scss/ui/_modal.scss
+++ b/src/scss/ui/_modal.scss
@@ -11,11 +11,14 @@
     align-items: center;
     z-index: var(--z-modal);
     transition: 0.3s;
-    opacity: 0;
-    visibility: hidden;
+    // opacity: 0;
+    // visibility: hidden;
     overflow-x: hidden;
     overflow-y: scroll;
 }
+// .cart{
+//     opacity: 1;
+// }
 
 .modal--right-top {
     padding-top: var(--header-height);
@@ -165,3 +168,72 @@
     visibility: visible;
     opacity: 1;
 }
+
+.gratitude {
+
+    &__content {
+        background: #000000;
+        background-image: url(../images/popups/lamp.svg);
+        background-repeat: no-repeat;
+        height: 300px;
+        max-width: 570px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+
+        @media screen and (max-width: 580px) {
+            height: 488px;
+        }
+
+        .btn__close{
+            position: absolute;
+            right: 20px;
+            top: 20px;
+            height: 16px;
+            width: 16px;
+            background-color: transparent;
+            background-image: url(../images/popups/close_btn.png);
+            @media screen and (max-width: 580px) {
+                right: 13px;
+            }
+        }
+    }
+
+    .container-modal{
+        
+    }
+
+    .wrapper{
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    
+
+    &__title{
+        font-family: var(--header-font);
+        font-weight: var(--font-bold);
+        font-size: var(--text-style-48-font-size);
+        line-height: 58.51px;
+        color: #FFFFFF;
+        margin-bottom: 5px;
+    }
+
+    &__text{
+        font-family: var(--header-font);
+        font-size: var(--text-style-14-font-size);
+        line-height: 17px;
+        color: #B4B4B4;
+        max-width: 220px;
+        width: 100%;
+    }
+    .social__links{
+        width: 216px;
+        column-gap: 20px
+    }
+}
+
