--- a/src/scss/ui/_modal.scss
+++ b/src/scss/ui/_modal.scss
@@ -16,9 +16,9 @@
     overflow-x: hidden;
     overflow-y: scroll;
 }
-// .cart{
-//     opacity: 1;
-// }
+.application{
+    opacity: 1;
+}
 
 .modal--right-top {
     padding-top: var(--header-height);
@@ -237,3 +237,63 @@
     }
 }
 
+
+.application{
+
+    @media screen and (max-width: 640px) {
+        padding: 0 10px;
+    }
+    
+    &__content{
+        position: relative;
+        max-width: 600px;
+        width: 100%;
+        height: 400px;
+        background-color: #FFFFFF;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        
+    }
+
+    &__container{
+        padding: 0 134px;
+        @media screen and (max-width: 768px) {
+            padding: 0 24px 0 20px;
+        }
+    }
+
+    &__title{
+        font-size: 28px;
+        line-height: 34px;
+        margin-bottom: 20px;
+
+        @media screen and (max-width: 768px) {
+            font-size: 20px;
+            line-height: 28px;
+            font-weight: var(--font-bold);
+        }
+    }
+
+    .button.button--red{
+        width: 176px;
+        @media screen and (max-width: 550px) {
+            font-size: 16px;
+            line-height: 18px;
+        }
+    }
+}
+
+.btn__close{
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    height: 16px;
+    width: 16px;
+    background-color: transparent;
+    background-image: url(../images/popups/close_btn.png);
+    @media screen and (max-width: 580px) {
+        right: 13px;
+    }
+}
