--- a/src/scss/ui/_modal.scss
+++ b/src/scss/ui/_modal.scss
@@ -14,11 +14,9 @@
     // opacity: 0;
     // visibility: hidden;
     overflow-x: hidden;
-    overflow-y: scroll;
+    // overflow-y: scroll;
 }
-.application{
-    opacity: 1;
-}
+
 
 .modal--right-top {
     padding-top: var(--header-height);
@@ -72,7 +70,7 @@
 }
 .modal__item-info {
     justify-self: stretch;
-    padding-right: 32px;
+    // padding-right: 32px;
 }
 .modal__item-title {
     font-size: var(--h4-font-size);
@@ -170,7 +168,7 @@
 }
 
 .gratitude {
-
+    
     &__content {
         background: #000000;
         background-image: url(../images/popups/lamp.svg);
@@ -284,6 +282,223 @@
         }
     }
 }
+
+
+.favourites{
+    
+    align-items: flex-start;
+    justify-content: flex-end;
+    &__content{
+        margin-top: 120px;
+        background: #FFFFFF;
+        max-width: 700px;
+        width: 100%;
+        padding: 50px 0;
+
+        @media screen and (max-width: 1100px) {
+            margin-top: 72px;
+        }
+    }
+
+    
+
+    
+
+    
+}
+
+.modal{
+    
+    &__container{
+        padding: 0 107px 0 50px;
+
+        @media screen and (max-width: 720px) {
+            padding: 0;
+        }
+    }
+
+    .wrapper{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    &__top{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 30px;
+        width: 100%;
+
+        .btn__close{
+            position: static;
+        }
+    }
+
+    &__title{
+        font-family: var(--header-font);
+        font-size: 28px;
+        line-height: 34px;
+        font-weight: var(--font-medium);
+
+        @media screen and (max-width: 768px) {
+            font-size: var(--h3-font-size);
+            font-weight: var(--font-bold);
+        }
+
+        @media screen and (max-width: 720px) {
+            padding-left: 9px;
+        }
+    }
+
+    &__list{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    &__item{
+
+        &:last-child{
+            border-bottom: 1px solid var(--grey-color);
+            padding-bottom: 5px;
+        }
+    }
+
+    &__item-box{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        @media screen and (max-width: 720px) {
+            padding: 0 20px 0 5px;
+            justify-content: space-around;
+        }
+        @media screen and (max-width: 520px) {
+            padding: 0 20px 0 5px;
+            justify-content: space-between;
+        }
+    }
+
+    &__img{
+        width: 120px;
+        height: 120px;
+        margin-right: 10px;
+
+        @media screen and (max-width: 720px) {
+            width: 80px;
+            height: 80px;
+        }
+    }
+    .product{
+        display: flex;
+        flex-direction: column;
+
+        &__title{
+            font-size: var(--text-style-20-font-size);
+            line-height: 24.38px;
+            font-weight: var(--font-bold);
+            margin-bottom: 5px;
+            max-width: 345px;
+            width: 100%;
+
+            @media screen and (max-width: 720px) {
+                font-size: 12px;
+                line-height: 14px;
+                max-width: 168px;
+            }
+        }
+
+        &__price-row{
+            display: flex;
+            align-items: flex-end;
+            margin-bottom: 5px;
+        }
+
+        &__price-discount{
+            font-family: var(--header-font);
+            font-size: var(--text-style-16-font-size);
+            line-height: 19.5px;
+            font-weight: var(--font-bold);
+            margin-right: 5px;
+
+            @media screen and (max-width: 720px) {
+                font-size: 9px;
+                line-height: 11px;
+            }
+        }
+
+        &__price-full{
+            font-size: 10px;
+            line-height: 14px;
+            color: #AFAFAF;
+            position: relative;
+
+            @media screen and (max-width: 720px) {
+                font-size: 6px;
+                line-height: 8px;
+            }
+
+            &::after{
+                position: absolute;
+                left: 0;
+                bottom: 5px;
+                content: '';
+                height: 1px;
+                width: 40px;
+                background-color: #AFAFAF;
+            }
+
+        }
+
+        &__manufacturer-info{
+            display: flex;
+            align-items: center;
+        }
+        
+        &__manufacturer-country{
+            margin-right: 5px;
+        }
+        &__manufacturer-country, &__manufacturer-name{
+            font-family: var(--header-font);
+            font-size: 10px;
+            line-height: 12px;
+            font-weight: var(--font-medium);
+
+            @media screen and (max-width: 720px) {
+                font-size: 6px;
+                line-height: 7px;
+            }
+        }
+
+        
+    }
+
+    &__btn-clear{
+        font-family: var(--header-font);
+        font-size: 14px;
+        margin-top: 15px;
+        line-height: 17px;
+        @media screen and (max-width: 720px) {
+            padding-right: 20px;
+        }
+    }
+
+    .modal__btn-like{
+        width: 20px;
+        height: 20px;
+        background-image: url(../images/popups/heart__icon.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+
+        @media screen and (max-width: 720px) {
+            height: 15px;
+            width: 15px;
+            
+        }
+    }
+}
+
 
 .btn__close{
     position: absolute;
