--- a/src/scss/ui/_modal.scss
+++ b/src/scss/ui/_modal.scss
@@ -297,7 +297,7 @@
 }
 
 
-.favourites,.comparison{
+.favourites,.comparison,.fast-order{
     
     align-items: flex-start;
     justify-content: flex-end;
@@ -317,7 +317,7 @@
 }
 
 
-.comparison{
+.comparison,.fast-order{
 
     .modal__item{
         .btn__close{
@@ -368,6 +368,20 @@
     }
     
 }
+
+.fast-order{
+    .comparison__btns{
+        margin-bottom: 60px;
+        .modal__btn-compare{
+            font-size: var(--text-style-20-font-size);
+            padding-left: 66px;
+            @media screen and (max-width: 720px) {
+                padding-left: 29px;
+            }
+        }
+    }
+}
+
 .modal{
     
     &__container{
@@ -393,6 +407,7 @@
 
         @media screen and (max-width: 720px) {
             padding: 0 20px 0 9px;
+            margin-bottom: 20px;
         }
 
         .btn__close{
@@ -559,7 +574,55 @@
         @media screen and (max-width: 720px) {
             height: 15px;
             width: 15px;
+        }
+    }
+
+    .form{
+        width: 100%;
+        @media screen and (max-width: 720px) {
+            padding: 0 10px;
+        }
+
+        &__title{
+            font-family: var(--header-font);
+            font-size: 28px;
+            line-height: 34px;
+            font-weight: var(--font-medium);
+            margin-bottom: 30px;
+    
+            @media screen and (max-width: 768px) {
+                font-size: var(--h3-font-size);
+                font-weight: var(--font-bold);
+                margin-bottom: 25px;
+                padding-left: 20px;
+            }
+    
             
+        }
+
+        &__fields{
+
+            @media screen and (max-width: 480px) {
+                grid-template-columns: 1fr;
+            }
+            .form__group:nth-child(3){
+                @media screen and (max-width: 480px) {
+                    grid-column: 1/2;
+                }
+            }
+            .form__group-input{
+                resize: vertical;
+            }
+        }
+        &__agreement{
+            @media screen and (max-width: 768px) {
+                max-width: none;
+            }
+        }
+        .button.button--red{
+            @media screen and (max-width: 768px) {
+                width: 100%;
+            }
         }
     }
 }
