--- a/src/scss/pages/card-product/_card-product.scss
+++ b/src/scss/pages/card-product/_card-product.scss
@@ -242,6 +242,21 @@
     line-height: 22px;
     align-items: center;
     margin-bottom: 5px;
+    transition: all .2s ease;
+
+    &:hover{
+        color: #6F6F6F;
+        transition: all .2s ease;
+        .card_product__download-icon{
+            fill: #6F6F6F;
+            transition: all .2s ease;
+        }
+    }
+}
+
+.card_product__download-svg{
+    transition: all .2s ease;
+    margin-left: 10px;
 }
 .card_product__document-link img {
     margin-left: 10px;
