--- a/src/scss/pages/contacts/_contacts.scss
+++ b/src/scss/pages/contacts/_contacts.scss
@@ -111,6 +111,18 @@
 
 .contacts__info-content {
     font-size: var(--text-style-18-font-size);
+
+
+    .social__item {
+        &:hover {
+            transition: all .2s ease;
+
+            .contacts__social-icon {
+                transition: all .2s ease;
+                fill: #636363;
+            }
+        }
+    }
 }
 
 .contacts__info-content-title {
