--- a/src/scss/ui/_modal.scss
+++ b/src/scss/ui/_modal.scss
@@ -6,16 +6,58 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: var(--z-modal);
+    // transition: 0.3s;
+    opacity: 0;
+    // visibility: hidden;
+    display: none;
+    overflow-x: hidden;
+    // overflow-y: scroll;
+    
+}
+
+// .img-slider,.img-slider-window{
+//     display: block!important;
+//     opacity: 1!important;
+//     visibility: visible!important;
+// }
+
+.img-slider{
+    .imagesSwiper{
+
+        width: 100vw;
+        .swiper-slide{
+            display: flex;
+            justify-content: center;
+            // max-width: 850px;
+            width: 100%!important;
+        }
+    }
+}
+
+.window{
+    position: relative;
+    display: flex;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .5s ease;
+    z-index: 10;
+}
+
+.active-window{
+    visibility: visible;
+    opacity: 1;
+}
+
+.overlay{
+    position: relative;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: var(--z-modal);
-    transition: 0.3s;
-    // opacity: 0;
-    // visibility: hidden;
-    overflow-x: hidden;
-    // overflow-y: scroll;
 }
+
 
 
 .modal--right-top {
@@ -163,9 +205,12 @@
 
 /* Active Modal */
 .active-modal {
-    visibility: visible;
-    opacity: 1;
+    display: flex!important;
+    opacity: 1!important;
+    transition: all 0.3s ease!important;
 }
+
+
 
 .gratitude {
     
@@ -210,10 +255,6 @@
                 transition: all .5s ease;
             }
         }
-    }
-
-    .container-modal{
-        
     }
 
     .wrapper{
@@ -261,10 +302,8 @@
         width: 100%;
         height: 400px;
         background-color: #FFFFFF;
-        display: flex;
         justify-content: center;
         align-items: center;
-
         
     }
 
@@ -641,3 +680,4 @@
         right: 13px;
     }
 }
+
