--- a/src/scss/pages/card-product/_card-product.scss
+++ b/src/scss/pages/card-product/_card-product.scss
@@ -19,6 +19,10 @@
         grid-template-columns: 1fr;
         
     }
+
+    .card_product__img{
+        height: 100%;
+    }
 }
 .card_product__images {
     background-color: var(--white-color);
