Add Fast-order form on Catalog Page

--- a/src/scss/ui/_modal.scss
+++ b/src/scss/ui/_modal.scss
@@ -336,6 +336,10 @@
     }
 }
 
+.fast-order{
+    opacity: 1!important;
+    display: block!important;
+}
 
 .favourites,.comparison,.fast-order{
     
