--- a/src/scss/ui/_ui.scss
+++ b/src/scss/ui/_ui.scss
@@ -1,4 +1,5 @@
 @import "./accordion";
+@import "./bitrix-forms";
 @import "./breadcrumbs";
 @import "./button";
 @import "./filter";
@@ -11,3 +12,4 @@
 @import "./modification-table";
 @import "./pagination";
 @import "./section";
+
