Add Sub-Catalog page

--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -11,3 +11,4 @@
 @import "./products/products";
 @import "./services/services";
 @import "./brands-catalog/brands-catalog";
+@import "./sub-catalog/sub-catalog";
