--- a/src/scss/ui/_section.scss
+++ b/src/scss/ui/_section.scss
@@ -95,7 +95,7 @@
     // width: 40%;
     width: 100%;
     max-width: 558px;
-    font-family: var(--header-font);
+    font-family: var(--body-font);
     @media screen and (max-width: 768px) {
         margin-top: 30px;
         font-size: var(--text-style-16-font-size);
