Replace Bitrix Gratitude to Custom Gratitude

--- a/src/scss/ui/_modal.scss
+++ b/src/scss/ui/_modal.scss
@@ -226,6 +226,7 @@
         justify-content: center;
         align-items: center;
         position: relative;
+        display: none;
 
         @media screen and (max-width: 580px) {
             height: 488px;
@@ -694,3 +695,10 @@
     }
 }
 
+.gratitude__modal-active{
+    display: flex;
+}
+
+.b24-form-wrapper.b24-from-state-on{
+    min-height: 0!important;
+}
