Add filter on Projects All

--- a/src/scss/pages/_pages.scss
+++ b/src/scss/pages/_pages.scss
@@ -12,3 +12,4 @@
 @import "./services/services";
 @import "./brands-catalog/brands-catalog";
 @import "./sub-catalog/sub-catalog";
+@import "./projects-all/projects-all";
