--- a/src/scss/ui/_modal.scss
+++ b/src/scss/ui/_modal.scss
@@ -448,7 +448,7 @@
     .wrapper{
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: flex-start;
     }
 
     &__top{
