--- a/src/scss/ui/_header.scss
+++ b/src/scss/ui/_header.scss
@@ -544,7 +544,7 @@
 
 .burger-menu {
     display: none;
-    z-index: -9999;
+    z-index: 9999;
     position: fixed;
     top: 0;
     left: -100%;
@@ -553,7 +553,7 @@
     background: #4A586E;
     padding-top: 15px;
     padding-bottom: 20px;
-    transition: all .5s ease 0s;
+    transition: all .5s ease;
     @media screen and (max-width: 1110px) {
         display: block;
     }
@@ -562,6 +562,7 @@
         padding-left: 20px;
     }
     &__btn-close{
+        cursor: pointer;
         position: absolute;
         right: 20px;
         width: 16px;
@@ -589,6 +590,7 @@
     &__link{
         font-size: 26px;
         line-height: 31.69px;
+        color: #FFFFFF;
     }
 
 
@@ -600,16 +602,18 @@
     &__link-contact{
         font-size: 16px;
         line-height: 19.5px;
+        color: #FFFFFF;
+
         &:first-child{
             margin-bottom: 5px;
         }
     }
 }
-.burger-menu.active{
-    left: 0%;
-    transition: all .5s ease 0s;
+.active{
+    left: 0;
+    transition: all .5s ease;
     z-index: 9999;
 }
-body.active{
+body-active{
     overflow: hidden;
 }
