--- a/src/scss/ui/_modal.scss
+++ b/src/scss/ui/_modal.scss
@@ -211,11 +211,14 @@
     transition: all 0.3s ease!important;
 }
 
-
+.display__none{
+    display: none!important;
+}
 
 .gratitude {
     
     &__content {
+        position: absolute;
         background: #000000;
         background-image: url(../images/popups/lamp.svg);
         background-repeat: no-repeat;
@@ -226,7 +229,7 @@
         justify-content: center;
         align-items: center;
         position: relative;
-        display: none;
+        // display: none;
 
         @media screen and (max-width: 580px) {
             height: 488px;
